# Fomenium

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  go.mod  go.sum  start.sh
Fomenium/: start.sh
cmd/client/: main.go
cmd/demo/: main.go
cmd/multiplexer/: main.go
cmd/validator/: main.go
docker/: Dockerfile.anvil  Dockerfile.multiplexer  Dockerfile.p4  Dockerfile.p4.fallback  Dockerfile.sp1  Dockerfile.validator
p4/: aggregator.p4
pkg/balance/: manager.go
pkg/crypto/: keys.go
pkg/ethereum/: anvil_client.go  simulator.go
pkg/p4/: client.go
pkg/payment/: batch.go  payment.go
pkg/zk/: prover.go
scripts/: deploy-ethereum.sh  start.sh
zk/: Cargo.toml  Dockerfile  docker-compose.yml  program.rs  supervisord.conf
