[package]
name = "nexus-zk-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "nexus-zk-server"
path = "server.rs"

[dependencies]
sp1-sdk = { git = "https://github.com/succinctlabs/sp1" }
sp1-zkvm = { git = "https://github.com/succinctlabs/sp1" }
sha2 = "0.10"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
warp = "0.3"
