[package]
name = "nexus-zk-program"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "nexus-zk-program"
path = "program.rs"

[dependencies]
sp1-zkvm = { git = "https://github.com/succinctlabs/sp1" }
sha2 = "0.10"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"

[profile.release]
opt-level = 3
lto = true
